--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
   height: 64px;
   background: #ffffff;
   border-radius: 5px;
-  color:#fd6e0a;
+  color: #fd6e0a;
   border: 0;
   padding: 18px 35px;
   font-weight: 700;
@@ -27,15 +27,15 @@
   border: 1px solid #fd6e0a;
   margin-left: 30px;
 }
-.header{
-    background: #FFF8F3;
-    background-image: url(../images/header_bg.png), url(../images/developer.png);
-    background-repeat: no-repeat;
-    background-position: bottom, right, left;
-    background-size: auto 100px 600px;
+.header {
+  background: #fff8f3;
+  background-image: url(../images/header_bg.png), url(../images/developer.png);
+  background-repeat: no-repeat;
+  background-position: bottom, right, left;
+  background-size: auto 100px 500px;
 }
-.header{
-     background-position: bottom right, 4% 45%;
+.header {
+  background-position: bottom right, 4% 45%;
 }
 /* Header and Navigation styles */
 nav {
@@ -79,39 +79,112 @@ nav ul {
   margin-bottom: 30px;
 }
 /* main section */
-main{
-    max-width: 1140px;
-    margin: 0 auto;
+main {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+.section {
+  margin-top: 130px;
 }
 /* about section styles */
-.about{
-    margin-top: 130px;
-    background: #FFF8F3;
-    border-radius: 10px;
-    padding: 130px 150px;
+.about {
+  margin-top: 130px;
+  background: #fff8f3;
+  border-radius: 10px;
+  padding: 130px 150px;
+  text-align: center;
+}
+.section-title {
+  text-align: center;
+  margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 35px;
+}
+.section-description {
+  color: #757575;
+  font-size: 18px;
+  margin-bottom: 30px;
+}
+.about-info-container {
+  display: flex;
+  justify-content: space-around;
+}
+.about .info-title {
+  font-size: 20px;
+  color: #757575;
+}
+.info-description {
+  font-weight: 700;
+  font-size: 20px;
+  color: #474747;
+}
+/* What i do */
+
+.skills-container {
+  display: flex;
+  gap: 24px;
+}
+.skill {
+  background: #ffffff;
+  box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+  padding: 30px;
+}
+.skill-title {
+  font-weight: 700;
+  font-size: 20px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+.skill-description {
+  color: #757575;
+}
+/* resume styles */
+.resume-content {
+  display: flex;
+  gap: 24px;
+}
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.resume .title {
+    font-weight: 700;
+    font-size: 25px;
+    color: #474747;
+    margin-bottom: 10px;
+}
+.resume .sub-title {
+  color: #757575;
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+.resume .description {
+  color: #757575;
+}
+.resume-button{
+    margin-top: 50px;
     text-align: center;
 }
-.section-title{
-    
-    margin-bottom: 30px;
-    font-weight: 700;
-    font-size: 35px;
-}
-.section-description{
-    color: #757575;
-    font-size: 18px;
-    margin-bottom: 30px;
-}
-.about-info-container{
+/* Contact section */
+.contact{
     display: flex;
-    justify-content: space-around;
+    gap: 100px;
+    background: #fff8f3;
+    padding: 130px 200px;
 }
-.about .info-title{
-    font-size: 20px;
-    color: #757575;
+.contact .section-title{
+    text-align: left;
 }
-.info-description{
-    font-weight: 700;
-    font-size: 20px;
-    color: #474747;
+.contact a{
+    text-decoration: none;
+}
+.contact input[type="text"],input[type="email"],textarea{
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%;
+    padding: 18px 30px;
+}
+input{
+    height: 64px;
 }
